documentation du module secteur
